...
            android:padding="4dp"
            android:text="@string/empty_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivArticleImage" />

        <TextView
            android:id="@+id/tvArticleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/empty_string"
            android:textColor="#000000"
            android:textSize="16sp"
...
